# ffmpeg-playground

./: CMakeLists.txt
copy_audio/: CMakeLists.txt  main.cpp
decode_video/: CMakeLists.txt  main.cpp
encode_video/: CMakeLists.txt  main.cpp
generate_video/: CMakeLists.txt  main.cpp
hello_ffmpeg/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  main.cpp
list_dir/: CMakeLists.txt  main.cpp
read_callback/: CMakeLists.txt  main.cpp
remuxing/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  main.cpp
scale_video/: CMakeLists.txt  main.cpp
transcode/: CMakeLists.txt  main.cpp
video2image/: CMakeLists.txt  main.cpp
